<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/inputheader" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="right"
                        android:paddingRight="10dip"
                        android:text="@string/expense_value"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/inputEdit1"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="right"
                        android:inputType="numberDecimal" >

                        <requestFocus />
                    </EditText>
                    
         
                    
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="right"
                        android:paddingRight="10dip"
                        android:text="@string/label"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Spinner
                        android:id="@+id/spinnerLabels1"
                      
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                    
                         
           
                   
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="right"
                        android:paddingRight="10dip"
                        android:text="@string/currency"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Spinner
                        android:id="@+id/intputSpinnerCurrency1"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                    
         
                </TableRow>
                
                 
            </TableLayout>

            <Button
                android:id="@+id/inputAdd1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_expense" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/inputStatistics"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/statistics" />

                <Button
                    android:id="@+id/inputOverview"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/expenses_list" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>