<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:gravity="center_vertical" >

     <LinearLayout
         android:background="@drawable/frame2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
         android:orientation="vertical"
         android:padding="10dip" >

       
         
         <LinearLayout
         	
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >

             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingRight="5dip"
                 android:src="@drawable/ic_launcher3" />

             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:text="@string/welcome_line0"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
         </LinearLayout>

         <View
             android:layout_width="fill_parent"
             android:layout_height="2dip"
             android:layout_marginBottom="10dip"
             android:background="#ffffffff" />

         <ScrollView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >

             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >

                 <TextView
                     android:id="@+id/textView1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dip"
                     android:text="@string/welcome_line1"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="#aaffffff" />

                 <TableLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" >

                     <TableRow
                         android:id="@+id/tableRow1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" >

                         <ImageView
                             android:id="@+id/imageView1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/bulett" />

                         <TextView
                             android:id="@+id/textView2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:text="@string/welcome_line2"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="#aaffffff" />
                     </TableRow>

                     <TableRow
                         android:id="@+id/tableRow2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" >

                         <ImageView
                             android:id="@+id/imageView2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/bulett" />

                         <TextView
                             android:id="@+id/textView3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:text="@string/welcome_line3"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="#aaffffff" />
                     </TableRow>

                     <TableRow
                         android:id="@+id/tableRow3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" >

                         <ImageView
                             android:id="@+id/imageView3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/bulett" />

                         <TextView
                             android:id="@+id/textView4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:text="@string/welcome_line4"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="#aaffffff" />
                     </TableRow>
                 </TableLayout>

                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dip"
                     android:text="@string/welcome_line5"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="#aaffffff" />
             </LinearLayout>
         </ScrollView>

         <Button
             android:id="@+id/welcomeCloseButton1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dip"
             android:text="@string/welcome_line6" />
     </LinearLayout>

</RelativeLayout>